--- a/views/category/category1.html
+++ b/views/category/category1.html
@@ -65,9 +65,9 @@
                         <div class="card bg-light">
                             <div class="card-body">
                                 <!-- Page content-->
-                                <div id="page-num">
-
-                                </div>
+                                <div id="pre-page-button"></div>
+                                <div id="page-num"></div>
+                                <div id="next-page-button"></div>
                                 <!-- Comment form-->
                                 <form class="mb-4"><textarea class="form-control" rows="3" placeholder="Join the discussion and leave a comment!"></textarea></form>
                                 <!-- Comment with nested comments-->
