Re setting Category and List File Folder

--- a/views/category1/list1.html
+++ b/views/category1/list1.html
@@ -68,6 +68,9 @@
                     <section class="mb-5">
                         <div class="card bg-light">
                             <div class="card-body">
+                                <!-- Page content-->
+                                <div id="pre-page-button"></div>
+                                <div id="next-page-button"></div>
                                 <!-- Comment form-->
                                 <form class="mb-4"><textarea class="form-control" rows="3" placeholder="Join the discussion and leave a comment!"></textarea></form>
                                 <!-- Comment with nested comments-->
@@ -354,5 +357,7 @@
         <!-- Bootstrap core JS-->
         <script src="../../assets/dist/js/bootstrap.bundle.min.js"></script>
         <script src="../../assets/dist/js/side.js"></script>
+        <script src="../../assets/js/common.js"></script>
+        <script src="../../assets/js/list.js"></script>
     </body>
 </html>
