get Category and List Name

--- a/views/category2/list1.html
+++ b/views/category2/list1.html
@@ -358,6 +358,6 @@
         <script src="../../assets/dist/js/bootstrap.bundle.min.js"></script>
         <script src="../../assets/dist/js/side.js"></script>
         <script src="../../assets/js/common.js"></script>
-        <script src="../../assets/js/category.js"></script>
+        <script src="../../assets/js/list.js"></script>
     </body>
 </html>
