--- a/views/category1/category1.html
+++ b/views/category1/category1.html
@@ -25,15 +25,16 @@
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container">
                 <a class="navbar-brand" href="../../index.html">Start Bootstrap</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <i class="bi bi-list custom-toggle-sidebar-btn navbar-brand"></i>
+                <!-- <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button> -->
+                <!-- <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                         <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
                         <li class="nav-item"><a class="nav-link" href="#!">About</a></li>
                         <li class="nav-item"><a class="nav-link" href="#!">Contact</a></li>
                         <li class="nav-item"><a class="nav-link active" aria-current="page" href="#">Blog</a></li>
                     </ul>
-                </div>
+                </div> -->
             </div>
         </nav>
         
@@ -45,7 +46,7 @@
                     <article>
                         <header class="mb-4">
                             <!-- Category title-->
-                            <h1 class="fw-bolder mb-1">Welcome to Blog Post!</h1>
+                            <h1 class="fw-bolder mb-1">Welcome to Blog Category1!</h1>
                             <!-- Category meta content-->
                             <div class="text-muted fst-italic mb-2">Posted on January 1, 2023 by Start Bootstrap</div>
                             <!-- Categorys categories-->
@@ -111,7 +112,7 @@
 
                 <!-- Side widgets-->
                 <div class="col-lg-3">
-                    <aside id="sidebar" class="sidebar mb-4">
+                    <aside id="sidebar" class="sidebar">
 
                         <ul class="sidebar-nav" id="sidebar-nav">
                     
