Change Blog Title to FileName

--- a/views/category2/category2.html
+++ b/views/category2/category2.html
@@ -45,7 +45,7 @@
                     <article>
                         <header class="mb-4">
                             <!-- Category title-->
-                            <h1 class="fw-bolder mb-1">Welcome to Blog Post!</h1>
+                            <h1 class="fw-bolder mb-1">Welcome to Blog Category2!</h1>
                             <!-- Category meta content-->
                             <div class="text-muted fst-italic mb-2">Posted on January 1, 2023 by Start Bootstrap</div>
                             <!-- Categorys categories-->
