Add Back to Top Button

--- a/views/category1/category1.html
+++ b/views/category1/category1.html
@@ -163,11 +163,14 @@
             </div>
         </div>
 
+        <!-- back to top -->
+        <a href="javascript:window.scrollTo(0,0);" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
         <!-- Footer-->
         <footer class="py-5 bg-dark">
             <div class="container"><p class="m-0 text-center text-white">Copyright &copy; Your Website 2023</p></div>
         </footer>
+
         <!-- Bootstrap core JS-->
         <script src="../../assets/dist/js/bootstrap.bundle.min.js"></script>
         <script src="../../assets/dist/js/side.js"></script>
