--- a/views/category1/category1.html
+++ b/views/category1/category1.html
@@ -164,7 +164,11 @@
         </div>
 
         <!-- back to top -->
-        <a href="javascript:window.scrollTo(0,0);" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+        <div class="container">
+            <div class="d-flex justify-content-end">
+                <a href="javascript:window.scrollTo(0,0);" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+            </div>
+        </div>
 
         <!-- Footer-->
         <footer class="py-5 bg-dark">
