--- a/views/category2/category2.html
+++ b/views/category2/category2.html
@@ -25,15 +25,16 @@
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container">
                 <a class="navbar-brand" href="../../index.html">Start Bootstrap</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <i class="bi bi-list custom-toggle-sidebar-btn navbar-brand"></i>
+                <!-- <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button> -->
+                <!-- <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                         <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
                         <li class="nav-item"><a class="nav-link" href="#!">About</a></li>
                         <li class="nav-item"><a class="nav-link" href="#!">Contact</a></li>
                         <li class="nav-item"><a class="nav-link active" aria-current="page" href="#">Blog</a></li>
                     </ul>
-                </div>
+                </div> -->
             </div>
         </nav>
         
@@ -45,7 +46,7 @@
                     <article>
                         <header class="mb-4">
                             <!-- Category title-->
-                            <h1 class="fw-bolder mb-1">Welcome to Blog Category2!</h1>
+                            <h1 class="fw-bolder mb-1">Welcome to Blog Category1!</h1>
                             <!-- Category meta content-->
                             <div class="text-muted fst-italic mb-2">Posted on January 1, 2023 by Start Bootstrap</div>
                             <!-- Categorys categories-->
@@ -57,61 +58,37 @@
                                 <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3" id="category-card-list">
                                 </div>
                             </div>
+
+                            <!-- Start Pagenation -->
+                            <div class="pagination-body d-flex justify-content-center">
+                                <nav aria-label="Page navigation example">
+                                    <ul class="pagination" id="pagination">
+                                      <!-- <li class="page-item disabled">
+                                        <a class="page-link" href="#" aria-disabled="true">&laquo;</a>
+                                      </li>
+                                      <li class="page-item">
+                                        <a class="page-link" href="#">1</a>
+                                      </li>
+                                      <li class="page-item active" aria-current="page">
+                                        <a class="page-link">2</a>
+                                      </li>
+                                      <li class="page-item">
+                                        <a class="page-link" href="#">3</a>
+                                      </li>
+                                      <li class="page-item">
+                                        <a class="page-link" href="#">&raquo;</a>
+                                      </li> -->
+                                    </ul>
+                                  </nav>
+                            </div>
+                            <!-- End Pagenation -->
                         </div>
                     </article>
-                    
-                    <!-- Comments section-->
-                    <section class="mb-5">
-                        <div class="card bg-light">
-                            <div class="card-body">
-                                <!-- Page content-->
-                                <div id="pre-page-button"></div>
-                                <div id="page-num"></div>
-                                <div id="next-page-button"></div>
-                                <!-- Comment form-->
-                                <form class="mb-4"><textarea class="form-control" rows="3" placeholder="Join the discussion and leave a comment!"></textarea></form>
-                                <!-- Comment with nested comments-->
-                                <div class="d-flex mb-4">
-                                    <!-- Parent comment-->
-                                    <div class="flex-shrink-0"><img class="rounded-circle" src="https://dummyimage.com/50x50/ced4da/6c757d.jpg" alt="..." /></div>
-                                    <div class="ms-3">
-                                        <div class="fw-bold">Commenter Name</div>
-                                        If you're going to lead a space frontier, it has to be government; it'll never be private enterprise. Because the space frontier is dangerous, and it's expensive, and it has unquantified risks.
-                                        <!-- Child comment 1-->
-                                        <div class="d-flex mt-4">
-                                            <div class="flex-shrink-0"><img class="rounded-circle" src="https://dummyimage.com/50x50/ced4da/6c757d.jpg" alt="..." /></div>
-                                            <div class="ms-3">
-                                                <div class="fw-bold">Commenter Name</div>
-                                                And under those conditions, you cannot establish a capital-market evaluation of that enterprise. You can't get investors.
-                                            </div>
-                                        </div>
-                                        <!-- Child comment 2-->
-                                        <div class="d-flex mt-4">
-                                            <div class="flex-shrink-0"><img class="rounded-circle" src="https://dummyimage.com/50x50/ced4da/6c757d.jpg" alt="..." /></div>
-                                            <div class="ms-3">
-                                                <div class="fw-bold">Commenter Name</div>
-                                                When you put money directly to a problem, it makes a good headline.
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                                <!-- Single comment-->
-                                <div class="d-flex">
-                                    <div class="flex-shrink-0"><img class="rounded-circle" src="https://dummyimage.com/50x50/ced4da/6c757d.jpg" alt="..." /></div>
-                                    <div class="ms-3">
-                                        <div class="fw-bold">Commenter Name</div>
-                                        When I look at the universe and all the ways the universe wants to kill us, I find it hard to reconcile that with statements of beneficence.
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </section>
                 </div>
-
 
                 <!-- Side widgets-->
                 <div class="col-lg-3">
-                    <aside id="sidebar" class="sidebar mb-4">
+                    <aside id="sidebar" class="sidebar">
 
                         <ul class="sidebar-nav" id="sidebar-nav">
                     
@@ -162,11 +139,18 @@
             </div>
         </div>
 
+        <!-- back to top -->
+        <div class="container">
+            <div class="d-flex justify-content-end">
+                <a href="javascript:window.scrollTo(0,0);" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+            </div>
+        </div>
 
         <!-- Footer-->
         <footer class="py-5 bg-dark">
             <div class="container"><p class="m-0 text-center text-white">Copyright &copy; Your Website 2023</p></div>
         </footer>
+
         <!-- Bootstrap core JS-->
         <script src="../../assets/dist/js/bootstrap.bundle.min.js"></script>
         <script src="../../assets/dist/js/side.js"></script>
