Setting Footer position

--- a/views/food/food.html
+++ b/views/food/food.html
@@ -41,7 +41,7 @@
         
         <div class="container mt-5">
             <div class="row">
-                <div class="col-lg-9">
+                <div class="col-lg-9" id="main-content">
                     <!-- Category content-->
                     <article>
                         <header class="mb-4">
@@ -148,7 +148,7 @@
 
         <!-- Footer-->
         <footer class="py-5 bg-dark">
-            <div class="container"><p class="col-lg-9 m-0 text-center text-white">Copyright &copy; Your Website 2023</p></div>
+            <div class="container"><p class="col-lg-9 m-0 text-center text-white" id="footer">Copyright &copy; Your Website 2023</p></div>
         </footer>
 
         <!-- Bootstrap core JS-->
