--- a/views/nature/nature1.html
+++ b/views/nature/nature1.html
@@ -40,7 +40,7 @@
         <!-- Page content-->
         <div class="container mt-5">
             <div class="row">
-                <div class="col-lg-9">
+                <div class="col-lg-9" id="main-content">
                     <!-- Post content-->
                     <article>
                         <!-- Post header-->
@@ -108,7 +108,7 @@
 
         <!-- Footer-->
         <footer class="py-5 bg-dark">
-            <div class="container"><p class="col-lg-9 m-0 text-center text-white">Copyright &copy; Your Website 2023</p></div>
+            <div class="container"><p class="col-lg-9 m-0 text-center text-white" id="footer">Copyright &copy; Your Website 2023</p></div>
         </footer>
 
         <!-- Bootstrap core JS-->
