Change Footer Copyright

--- a/views/food/food.html
+++ b/views/food/food.html
@@ -148,7 +148,7 @@
 
         <!-- Footer-->
         <footer class="py-5 bg-dark">
-            <div class="container"><p class="col-lg-9 m-0 text-center text-white" id="footer">Copyright &copy; Your Website 2023</p></div>
+            <div class="container"><p class="col-lg-9 m-0 text-center text-white" id="footer">Copyright &copy; Starflower 2024</p></div>
         </footer>
 
         <!-- Bootstrap core JS-->
