--- a/views/food/food2.html
+++ b/views/food/food2.html
@@ -19,6 +19,7 @@
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="../../assets/dist/css/side-styles.css" rel="stylesheet">
         <link href="../../assets/dist/css/side-styles1.css" rel="stylesheet">
+        <link href="../../assets/dist/css/common.css" rel="stylesheet">
     </head>
     <body>
         <!-- Responsive navbar-->
