Change Post attribute

--- a/views/food/food.html
+++ b/views/food/food.html
@@ -47,12 +47,10 @@
                     <article>
                         <header class="mb-4">
                             <!-- Category title-->
-                            <h1 class="fw-bolder mb-1">Welcome to Blog Food!</h1>
-                            <!-- Category meta content-->
-                            <div class="text-muted fst-italic mb-2">Posted on January 1, 2023 by Start Bootstrap</div>
+                            <h1 class="fw-bolder mb-1">Welcome to Category Food!</h1>
                             <!-- Categorys categories-->
-                            <a class="badge bg-secondary text-decoration-none link-light" href="#!">Web Design</a>
-                            <a class="badge bg-secondary text-decoration-none link-light" href="#!">Freebies</a>
+                            <a class="badge bg-secondary text-decoration-none link-light">Illustration</a>
+                            <a class="badge bg-secondary text-decoration-none link-light">Freebies</a>
                         </header>
                         <div class="album py-5 bg-light">
                             <div class="container">
