--- a/views/nature/nature1.html
+++ b/views/nature/nature1.html
@@ -47,12 +47,12 @@
                         <!-- Post header-->
                         <header class="mb-4">
                             <!-- Post title-->
-                            <h1 class="fw-bolder mb-1">Welcome to Blog Nature!</h1>
+                            <h1 class="fw-bolder mb-1">Welcome to Post Nature!</h1>
                             <!-- Post meta content-->
-                            <div class="text-muted fst-italic mb-2">Posted on January 1, 2023 by Start Bootstrap</div>
+                            <div class="text-muted fst-italic mb-2">Posted on April 24, 2024 by Starflower</div>
                             <!-- Post categories-->
-                            <a class="badge bg-secondary text-decoration-none link-light" href="#!">Web Design</a>
-                            <a class="badge bg-secondary text-decoration-none link-light" href="#!">Freebies</a>
+                            <a class="badge bg-secondary text-decoration-none link-light">Illustration</a>
+                            <a class="badge bg-secondary text-decoration-none link-light">Freebies</a>
                         </header>
                         <!-- Preview image figure-->
                         <figure class="mb-4"><img class="img-fluid rounded" src="../../assets/img/category/nature/nature1.png" alt="..." /></figure>
