--- a/views/food/santa_cats_cake.html
+++ b/views/food/santa_cats_cake.html
@@ -19,7 +19,7 @@
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="../../assets/dist/css/side-styles.css" rel="stylesheet">
         <link href="../../assets/dist/css/side-styles1.css" rel="stylesheet">
-
+        
         <!-- Custom CSS -->
         <link href="../../assets/css/common.css" rel="stylesheet">
     </head>
@@ -49,7 +49,7 @@
                         <!-- Post header-->
                         <header class="mb-4">
                             <!-- Post title-->
-                            <h1 class="fw-bolder mb-1">Welcome to Post Nature!</h1>
+                            <h1 class="fw-bolder mb-1">Welcome to Post Food!</h1>
                             <!-- Post meta content-->
                             <div class="text-muted fst-italic mb-2">Posted on April 24, 2024 by Starflower</div>
                             <!-- Post categories-->
@@ -57,7 +57,7 @@
                             <a class="badge bg-secondary text-decoration-none link-light">Freebies</a>
                         </header>
                         <!-- Preview image figure-->
-                        <figure class="mb-4"><img class="img-fluid rounded" src="../../assets/img/category/nature/nature3.png" alt="..." /></figure>
+                        <figure class="mb-4"><img class="img-fluid rounded" src="../../assets/img/category/food/santa_cats_cake.png" alt="..." /></figure>
                         <!-- Post content-->
                         <section class="mb-5">
                             <p class="fs-5 mb-4">Science is an enterprise that should be cherished as an activity of the free human mind. Because it transforms who we are, how we live, and it gives us an understanding of our place in the universe.</p>
