Change Nav, Footer, Pagination Position and js

--- a/views/food/santa_cats_cake.html
+++ b/views/food/santa_cats_cake.html
@@ -25,7 +25,7 @@
     </head>
     <body>
         <!-- Responsive navbar-->
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark shadow-sm">
             <div class="container">
                 <a class="navbar-brand" href="../../index.html">Starflower Illustration</a>
                 <i class="bi bi-list custom-toggle-sidebar-btn navbar-brand"></i>
@@ -41,9 +41,9 @@
             </div>
         </nav>
         <!-- Page content-->
-        <div class="container mt-5">
+        <div class="container mt-5" id="main-content">
             <div class="row">
-                <div class="col-lg-9" id="main-content">
+                <div class="col-lg-9">
                     <!-- Post content-->
                     <article>
                         <!-- Post header-->
@@ -68,29 +68,6 @@
                             <p class="fs-5 mb-4">Venus has a runaway greenhouse effect. I kind of want to know what happened there because we're twirling knobs here on Earth without knowing the consequences of it. Mars once had running water. It's bone dry today. Something bad happened there as well.</p>
                         </section>
                     </article>
-                    <!-- Comments section-->
-                    <section class="mb-5">
-                        <!-- <div class="card bg-light"> -->
-                            <!-- <div class="card-body"> -->
-                                <!-- Start Pagenation -->
-                                <div class="pagination-body d-flex justify-content-center">
-                                    <nav aria-label="Page navigation example">
-                                        <ul class="pagination" id="pagination">
-                                            <li class="page-item">
-                                                <a class="page-link" href="#">&laquo;</a>
-                                            </li>
-                                            <li class="page-item" aria-current="page">
-                                                <a class="page-link">random</a>
-                                            </li>
-                                            <li class="page-item">
-                                                <a class="page-link" href="#">&raquo;</a>
-                                            </li>
-                                        </ul>
-                                    </nav>
-                                </div>
-                            <!-- </div> -->
-                        <!-- </div> -->
-                    </section>
                 </div>
                 <!-- Side widgets-->
                 <div class="col-lg-3">
@@ -100,6 +77,28 @@
                     </aside><!-- End Sidebar-->
                 </div>
             </div>
+            <section class="my-5">
+                <!-- <div class="card bg-light"> -->
+                    <!-- <div class="card-body"> -->
+                        <!-- Start Pagenation -->
+                        <div class="pagination-body d-flex justify-content-center">
+                            <nav aria-label="Page navigation example">
+                                <ul class="pagination" id="pagination">
+                                    <li class="page-item">
+                                        <a class="page-link" href="#">&laquo;</a>
+                                    </li>
+                                    <li class="page-item" aria-current="page">
+                                        <a class="page-link">random</a>
+                                    </li>
+                                    <li class="page-item">
+                                        <a class="page-link" href="#">&raquo;</a>
+                                    </li>
+                                </ul>
+                            </nav>
+                        </div>
+                    <!-- </div> -->
+                <!-- </div> -->
+            </section>
         </div>
 
         <!-- back to top -->
