--- a/views/nature/nature.html
+++ b/views/nature/nature.html
@@ -25,7 +25,7 @@
     </head>
     <body>
         <!-- Responsive navbar-->
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark shadow-sm">
             <div class="container">
               <a class="navbar-brand" href="../../index.html">Starflower Illustration</a>
                 <i class="bi bi-list custom-toggle-sidebar-btn navbar-brand"></i>
@@ -42,9 +42,9 @@
         </nav>
         
         
-        <div class="container mt-5">
+        <div class="container mt-5" id="main-content">
             <div class="row">
-                <div class="col-lg-9" id="main-content">
+                <div class="col-lg-9">
                     <!-- Category content-->
                     <article>
                         <header class="mb-4">
@@ -59,30 +59,6 @@
                                 <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3" id="category-card-list">
                                 </div>
                             </div>
-
-                            <!-- Start Pagenation -->
-                            <div class="pagination-body d-flex justify-content-center">
-                                <nav aria-label="Page navigation example">
-                                    <ul class="pagination" id="pagination">
-                                      <!-- <li class="page-item disabled">
-                                        <a class="page-link" href="#" aria-disabled="true">&laquo;</a>
-                                      </li>
-                                      <li class="page-item">
-                                        <a class="page-link" href="#">1</a>
-                                      </li>
-                                      <li class="page-item active" aria-current="page">
-                                        <a class="page-link">2</a>
-                                      </li>
-                                      <li class="page-item">
-                                        <a class="page-link" href="#">3</a>
-                                      </li>
-                                      <li class="page-item">
-                                        <a class="page-link" href="#">&raquo;</a>
-                                      </li> -->
-                                    </ul>
-                                  </nav>
-                            </div>
-                            <!-- End Pagenation -->
                         </div>
                     </article>
                 </div>
@@ -90,9 +66,7 @@
                 <!-- Side widgets-->
                 <div class="col-lg-3">
                     <aside id="sidebar" class="sidebar">
-
                         <ul class="sidebar-nav" id="sidebar-nav">
-                    
                           <!-- <li class="nav-item">
                             <a class="nav-link " href="index.html">
                               <i class="bi bi-grid"></i>
@@ -134,10 +108,32 @@
                             <!-- <i class="bi bi-dash-circle"></i> -->
                             <!-- <i class="bi bi-file-earmark"></i> -->
                         </ul>
-                    
                       </aside><!-- End Sidebar-->
                 </div>
             </div>
+            <!-- Start Pagenation -->
+            <div class="pagination-body d-flex justify-content-center mt-5">
+              <nav aria-label="Page navigation example">
+                  <ul class="pagination" id="pagination">
+                    <!-- <li class="page-item disabled">
+                      <a class="page-link" href="#" aria-disabled="true">&laquo;</a>
+                    </li>
+                    <li class="page-item">
+                      <a class="page-link" href="#">1</a>
+                    </li>
+                    <li class="page-item active" aria-current="page">
+                      <a class="page-link">2</a>
+                    </li>
+                    <li class="page-item">
+                      <a class="page-link" href="#">3</a>
+                    </li>
+                    <li class="page-item">
+                      <a class="page-link" href="#">&raquo;</a>
+                    </li> -->
+                  </ul>
+                </nav>
+            </div>
+            <!-- End Pagenation -->
         </div>
 
         <!-- back to top -->
@@ -148,8 +144,8 @@
         </div>
 
         <!-- Footer-->
-        <footer class="py-5 bg-dark">
-            <div class="container"><p class="col-lg-9 m-0 text-center text-white" id="footer">Copyright &copy; Starflower 2024</p></div>
+        <footer class="py-5 bg-dark footer" id="footer1">
+            <div class="container"><p class="col-lg-9 m-0 text-center text-white">Copyright &copy; Starflower 2024</p></div>
         </footer>
 
         <!-- Bootstrap core JS-->
