Change Pagination position in Html

--- a/views/food/food.html
+++ b/views/food/food.html
@@ -144,7 +144,7 @@
         </div>
 
         <!-- Footer-->
-        <footer class="py-5 bg-dark footer" id="footer1">
+        <footer class="py-5 bg-dark">
             <div class="container"><p class="col-lg-9 m-0 text-center text-white">Copyright &copy; Starflower 2024</p></div>
         </footer>
 
