--- a/views/nature/nature.html
+++ b/views/nature/nature.html
@@ -112,7 +112,7 @@
                 </div>
             </div>
             <!-- Start Pagenation -->
-            <div class="pagination-body d-flex justify-content-center mt-5">
+            <div class="col-lg-9 pagination-body d-flex justify-content-center mt-5">
               <nav aria-label="Page navigation example">
                   <ul class="pagination" id="pagination">
                     <!-- <li class="page-item disabled">
@@ -144,8 +144,8 @@
         </div>
 
         <!-- Footer-->
-        <footer class="py-5 bg-dark footer" id="footer1">
-            <div class="container"><p class="col-lg-9 m-0 text-center text-white">Copyright &copy; Starflower 2024</p></div>
+        <footer class="py-5 bg-dark">
+            <div><p class="col-lg-9 m-0 text-center text-white">Copyright &copy; Starflower 2024</p></div>
         </footer>
 
         <!-- Bootstrap core JS-->
