--- a/views/food/santa_cats_cake1.html
+++ b/views/food/santa_cats_cake1.html
@@ -77,28 +77,23 @@
                     </aside><!-- End Sidebar-->
                 </div>
             </div>
-            <section class="my-5">
-                <!-- <div class="card bg-light"> -->
-                    <!-- <div class="card-body"> -->
-                        <!-- Start Pagenation -->
-                        <div class="pagination-body d-flex justify-content-center">
-                            <nav aria-label="Page navigation example">
-                                <ul class="pagination" id="pagination">
-                                    <li class="page-item">
-                                        <a class="page-link" href="#">&laquo;</a>
-                                    </li>
-                                    <li class="page-item" aria-current="page">
-                                        <a class="page-link">random</a>
-                                    </li>
-                                    <li class="page-item">
-                                        <a class="page-link" href="#">&raquo;</a>
-                                    </li>
-                                </ul>
-                            </nav>
-                        </div>
-                    <!-- </div> -->
-                <!-- </div> -->
-            </section>
+            <!-- Start Pagenation -->
+            <div class="col-lg-9 pagination-body d-flex justify-content-center mb-5">
+                <nav aria-label="Page navigation example">
+                    <ul class="pagination" id="pagination">
+                        <li class="page-item">
+                            <a class="page-link" href="#">&laquo;</a>
+                        </li>
+                        <li class="page-item" aria-current="page">
+                            <a class="page-link">random</a>
+                        </li>
+                        <li class="page-item">
+                            <a class="page-link" href="#">&raquo;</a>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
+            <!-- End Pagenation -->
         </div>
 
         <!-- back to top -->
@@ -110,7 +105,7 @@
 
         <!-- Footer-->
         <footer class="py-5 bg-dark">
-            <div class="container"><p class="col-lg-9 m-0 text-center text-white" id="footer">Copyright &copy; Starflower 2024</p></div>
+            <div class="container"><p class="col-lg-9 m-0 text-center text-white">Copyright &copy; Starflower 2024</p></div>
         </footer>
 
         <!-- Bootstrap core JS-->
