Insert col-lg-9 to Pagenation in food.html

--- a/views/food/food.html
+++ b/views/food/food.html
@@ -112,7 +112,7 @@
                 </div>
             </div>
             <!-- Start Pagenation -->
-            <div class="pagination-body d-flex justify-content-center mt-5">
+            <div class="col-lg-9 pagination-body d-flex justify-content-center mt-5">
               <nav aria-label="Page navigation example">
                   <ul class="pagination" id="pagination">
                     <!-- <li class="page-item disabled">
