--- a/views/nature/nature.html
+++ b/views/nature/nature.html
@@ -54,7 +54,7 @@
                             <a class="badge bg-secondary text-decoration-none link-light">Illustration</a>
                             <a class="badge bg-secondary text-decoration-none link-light">Freebies</a>
                         </header>
-                        <div class="album py-5 bg-light">
+                        <div class="album py-4 bg-light">
                             <div class="container">
                                 <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3" id="category-card-list">
                                 </div>
@@ -112,7 +112,7 @@
                 </div>
             </div>
             <!-- Start Pagenation -->
-            <div class="col-lg-9 pagination-body d-flex justify-content-center mt-5">
+            <div class="col-lg-9 pagination-body d-flex justify-content-center my-4">
               <nav aria-label="Page navigation example">
                   <ul class="pagination" id="pagination">
                     <!-- <li class="page-item disabled">
