--- a/views/nature/nature.html
+++ b/views/nature/nature.html
@@ -28,7 +28,12 @@
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark shadow-sm">
             <div class="container">
               <a class="navbar-brand" href="../../index.html">Starflower Illustration</a>
-                <i class="bi bi-list custom-toggle-sidebar-btn navbar-brand"></i>
+                <div class="d-flex justify-content-between">
+                    <a class="custom-toggle-sidebar-btn" href="javascript:void(0)">
+                        <span class="navbar-toggler-icon"></span>
+                        <!-- <i class="bi bi-list navbar-brand"></i> -->
+                    </a>
+                </div>
                 <!-- <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button> -->
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
@@ -37,28 +42,19 @@
             </div>
         </nav>
         
-        
         <div class="container mt-5" id="main-content">
             <div class="row">
-                <div class="col-lg-9">
-                    <!-- Category content-->
-                    <article>
-                        <header class="mb-4">
-                            <!-- Category title-->
-                            <h1 class="fw-bolder mb-1">Welcome to Category Nature!</h1>
-                            <!-- Categorys categories-->
-                            <a class="badge bg-secondary text-decoration-none link-light">Illustration</a>
-                            <a class="badge bg-secondary text-decoration-none link-light">Freebies</a>
-                        </header>
-                        <div class="album py-4 bg-light">
-                            <div class="container">
-                                <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3" id="category-card-list">
-                                </div>
-                            </div>
-                        </div>
-                    </article>
+                <div class="col-lg-3">
                 </div>
-
+                <div class="col-lg-9">
+                    <header class="mb-4">
+                        <!-- Category title-->
+                        <h1 class="fw-bolder mb-1">Welcome to Category Nature!</h1>
+                        <!-- Categorys categories-->
+                        <a class="badge bg-secondary text-decoration-none link-light">Illustration</a>
+                        <a class="badge bg-secondary text-decoration-none link-light">Freebies</a>
+                    </header>
+                </div>
                 <!-- Side widgets-->
                 <div class="col-lg-3">
                     <aside id="sidebar" class="sidebar">
@@ -106,30 +102,42 @@
                         </ul>
                       </aside><!-- End Sidebar-->
                 </div>
+                <div class="col-lg-9">
+                    <!-- Category content-->
+                    <article>
+                        
+                        <div class="album py-4 bg-light">
+                            <div class="container">
+                                <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3" id="category-card-list">
+                                </div>
+                            </div>
+                        </div>
+                    </article>
+                    <!-- Start Pagenation -->
+                    <div class="pagination-body d-flex justify-content-center my-4">
+                        <nav aria-label="Page navigation example">
+                            <ul class="pagination" id="pagination">
+                            <!-- <li class="page-item disabled">
+                                <a class="page-link" href="#" aria-disabled="true">&laquo;</a>
+                            </li>
+                            <li class="page-item">
+                                <a class="page-link" href="#">1</a>
+                            </li>
+                            <li class="page-item active" aria-current="page">
+                                <a class="page-link">2</a>
+                            </li>
+                            <li class="page-item">
+                                <a class="page-link" href="#">3</a>
+                            </li>
+                            <li class="page-item">
+                                <a class="page-link" href="#">&raquo;</a>
+                            </li> -->
+                            </ul>
+                        </nav>
+                    </div>
+                    <!-- End Pagenation -->
+                </div>
             </div>
-            <!-- Start Pagenation -->
-            <div class="col-lg-9 pagination-body d-flex justify-content-center my-4">
-              <nav aria-label="Page navigation example">
-                  <ul class="pagination" id="pagination">
-                    <!-- <li class="page-item disabled">
-                      <a class="page-link" href="#" aria-disabled="true">&laquo;</a>
-                    </li>
-                    <li class="page-item">
-                      <a class="page-link" href="#">1</a>
-                    </li>
-                    <li class="page-item active" aria-current="page">
-                      <a class="page-link">2</a>
-                    </li>
-                    <li class="page-item">
-                      <a class="page-link" href="#">3</a>
-                    </li>
-                    <li class="page-item">
-                      <a class="page-link" href="#">&raquo;</a>
-                    </li> -->
-                  </ul>
-                </nav>
-            </div>
-            <!-- End Pagenation -->
         </div>
 
         <!-- back to top -->
@@ -141,7 +149,7 @@
 
         <!-- Footer-->
         <footer class="py-5 bg-dark">
-            <div><p class="col-lg-9 m-0 text-center text-white">Copyright &copy; Starflower 2024</p></div>
+            <div class="container"><p class="my-4 m-0 text-center text-white">Copyright &copy; Starflower 2024</p></div>
         </footer>
 
         <!-- Bootstrap core JS-->
