--- a/views/food/santa_cats_cake.html
+++ b/views/food/santa_cats_cake.html
@@ -106,15 +106,19 @@
             </div>
         </div>
 
+        <div id="footer-layout"></div>
+
+        <script src="../../assets/js/layout.js"></script>
+
         <!-- Footer-->
-        <footer class="py-5 bg-dark">
+        <!-- <footer class="py-5 bg-dark">
             <div class="container"><p class="m-0 text-center text-white">Copyright &copy; Starflower 2024</p></div>
-        </footer>
+        </footer> -->
 
         <!-- Bootstrap core JS-->
-        <script src="../../assets/dist/js/bootstrap.bundle.min.js"></script>
+        <!-- <script src="../../assets/dist/js/bootstrap.bundle.min.js"></script>
         <script src="../../assets/dist/js/side.js"></script>
         <script src="../../assets/js/common.js"></script>
-        <script src="../../assets/js/list.js"></script>
+        <script src="../../assets/js/list.js"></script> -->
     </body>
 </html>
