Update Header to layerout

--- a/views/food/santa_cats_cake.html
+++ b/views/food/santa_cats_cake.html
@@ -24,23 +24,9 @@
         <link href="../../assets/css/common.css" rel="stylesheet">
     </head>
     <body>
-        <!-- Responsive navbar-->
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark shadow-sm">
-            <div class="container">
-                <a class="navbar-brand" href="../../index.html">Starflower Illustration</a>
-                <div class="d-flex justify-content-between">
-                    <a class="custom-toggle-sidebar-btn" href="javascript:void(0)">
-                        <span class="navbar-toggler-icon"></span>
-                        <!-- <i class="bi bi-list navbar-brand"></i> -->
-                    </a>
-                </div>
-                <!-- <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button> -->
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                    </ul>
-                </div>
-            </div>
-        </nav>
+        <!-- Header Layout -->
+        <div id="header-layout"></div>
+
         <!-- Page content-->
         <div class="container mt-5" id="main-content">
             <div class="row">
@@ -99,13 +85,7 @@
             </div>
         </div>
 
-        <!-- back to top -->
-        <div class="container">
-            <div class="d-flex justify-content-end">
-                <a href="javascript:window.scrollTo(0,0);" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
-            </div>
-        </div>
-
+        <!-- Footer Layout -->
         <div id="footer-layout"></div>
 
         <script src="../../assets/js/layout.js"></script>
