--- a/views/layout/footer.html
+++ b/views/layout/footer.html
@@ -1,3 +1,10 @@
+<!-- back to top -->
+<div class="container">
+    <div class="d-flex justify-content-end">
+        <a href="javascript:window.scrollTo(0,0);" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+    </div>
+</div>
+
 <!-- Footer-->
 <footer class="py-5 bg-dark">
     <div class="container"><p class="m-0 text-center text-white">Copyright &copy; Starflower 2024</p></div>
