Remove Before footer

--- a/views/food/santa_cats_cake.html
+++ b/views/food/santa_cats_cake.html
@@ -88,17 +88,8 @@
         <!-- Footer Layout -->
         <div id="footer-layout"></div>
 
+        <!-- Layout JS -->
         <script src="../../assets/js/layout.js"></script>
 
-        <!-- Footer-->
-        <!-- <footer class="py-5 bg-dark">
-            <div class="container"><p class="m-0 text-center text-white">Copyright &copy; Starflower 2024</p></div>
-        </footer> -->
-
-        <!-- Bootstrap core JS-->
-        <!-- <script src="../../assets/dist/js/bootstrap.bundle.min.js"></script>
-        <script src="../../assets/dist/js/side.js"></script>
-        <script src="../../assets/js/common.js"></script>
-        <script src="../../assets/js/list.js"></script> -->
     </body>
 </html>
