--- a/views/food/santa_cats_cake.html
+++ b/views/food/santa_cats_cake.html
@@ -81,7 +81,7 @@
         <div id="footer-layout"></div>
 
         <!-- Layout JS -->
-        <script src="../../assets/js/layout.js"></script>
+        <script src="../../assets/js/listLayout.js"></script>
 
     </body>
 </html>
