--- a/views/food/santa_cats_cake1.html
+++ b/views/food/santa_cats_cake1.html
@@ -1,14 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <meta name="description" content="" />
-        <meta name="author" content="" />
-        <title>Starflower Illustration Post</title>
-        <!-- Favicon-->
-        <!-- <link rel="icon" type="image/x-icon" href="assets/favicon.ico" /> -->
-
         <!-- Bootstrap Icons-->
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 
@@ -24,23 +16,9 @@
         <link href="../../assets/css/common.css" rel="stylesheet">
     </head>
     <body>
-        <!-- Responsive navbar-->
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark shadow-sm">
-            <div class="container">
-                <a class="navbar-brand" href="../../index.html">Starflower Illustration</a>
-                <div class="d-flex justify-content-between">
-                    <a class="custom-toggle-sidebar-btn" href="javascript:void(0)">
-                        <span class="navbar-toggler-icon"></span>
-                        <!-- <i class="bi bi-list navbar-brand"></i> -->
-                    </a>
-                </div>
-                <!-- <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button> -->
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                    </ul>
-                </div>
-            </div>
-        </nav>
+        <!-- Header Layout -->
+        <div id="header-layout"></div>
+
         <!-- Page content-->
         <div class="container mt-5" id="main-content">
             <div class="row">
@@ -99,22 +77,11 @@
             </div>
         </div>
 
-        <!-- back to top -->
-        <div class="container">
-            <div class="d-flex justify-content-end">
-                <a href="javascript:window.scrollTo(0,0);" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
-            </div>
-        </div>
+        <!-- Footer Layout -->
+        <div id="footer-layout"></div>
 
-        <!-- Footer-->
-        <footer class="py-5 bg-dark">
-            <div class="container"><p class="m-0 text-center text-white">Copyright &copy; Starflower 2024</p></div>
-        </footer>
+        <!-- Layout JS -->
+        <script src="../../assets/js/listLayout.js"></script>
 
-        <!-- Bootstrap core JS-->
-        <script src="../../assets/dist/js/bootstrap.bundle.min.js"></script>
-        <script src="../../assets/dist/js/side.js"></script>
-        <script src="../../assets/js/common.js"></script>
-        <script src="../../assets/js/list.js"></script>
     </body>
 </html>
