--- a/views/nature/cats_running_through_the_yellow_grass.html
+++ b/views/nature/cats_running_through_the_yellow_grass.html
@@ -1,14 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <meta name="description" content="" />
-        <meta name="author" content="" />
-        <title>Starflower Illustration Post</title>
-        <!-- Favicon-->
-        <!-- <link rel="icon" type="image/x-icon" href="assets/favicon.ico" /> -->
-
         <!-- Bootstrap Icons-->
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 
@@ -24,6 +16,9 @@
         <link href="../../assets/css/common.css" rel="stylesheet">
     </head>
     <body>
+        <!-- Header Layout -->
+        <div id="header-layout"></div>
+        
         <!-- Responsive navbar-->
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark shadow-sm">
             <div class="container">
@@ -99,22 +94,11 @@
             </div>
         </div>
 
-        <!-- back to top -->
-        <div class="container">
-            <div class="d-flex justify-content-end">
-                <a href="javascript:window.scrollTo(0,0);" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
-            </div>
-        </div>
+        <!-- Footer Layout -->
+        <div id="footer-layout"></div>
 
-        <!-- Footer-->
-        <footer class="py-5 bg-dark">
-            <div class="container"><p class="m-0 text-center text-white">Copyright &copy; Starflower 2024</p></div>
-        </footer>
+        <!-- Layout JS -->
+        <script src="../../assets/js/listLayout.js"></script>
 
-        <!-- Bootstrap core JS-->
-        <script src="../../assets/dist/js/bootstrap.bundle.min.js"></script>
-        <script src="../../assets/dist/js/side.js"></script>
-        <script src="../../assets/js/common.js"></script>
-        <script src="../../assets/js/list.js"></script>
     </body>
 </html>
