modified categoryfooter's margin

--- a/views/layout/category_footer.html
+++ b/views/layout/category_footer.html
@@ -7,7 +7,7 @@
 
 <!-- Footer-->
 <footer class="py-5 bg-dark">
-    <div class="container"><p class="my-4 m-0 text-center text-white">Copyright &copy; Starflower 2024</p></div>
+    <div class="container"><p class="m-0 text-center text-white">Copyright &copy; Starflower 2024</p></div>
 </footer>
 
 <!-- Bootstrap core JS-->
